package name changed from ai.bsdb to tech.bsdb, and add task to upload to maven central repo